--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="p-5 m-5 center">
         <h1 class="display-1 text-center">Clinical Care System</h1>
         <h1 class="display-4 text-center mb-5">Login</h1>
-        <form action="/patient.html" method="get" class="form p-5 form-border">
+        <form action="patient.html" method="get" class="form p-5 form-border">
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input
