Revised index.html and patient

--- a/patient.html
+++ b/patient.html
@@ -15,7 +15,7 @@
   </head>
   <style></style>
   <body>
-    <div class="container text-center m-5">
+    <div class="container text-center">
       <h1 class="display-4 lead mb-5">Clinical Care System</h1>
       <h1 class="display-2">Patient's List</h1>
       <div class="table-responsive">
