--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <h1 class="display-4 text-center mb-5">Login</h1>
         <form action="patient.html" method="get" class="form p-5 form-border">
           <div class="mb-3">
-            <label for="username" class="form-label">Username</label>
+            <label for="username" class="form-label fs-4 fw-semibold"
+              >Username</label
+            >
             <input
               type="text"
               class="form-control"
@@ -37,16 +39,18 @@
               id=""
               aria-describedby="helpId"
               placeholder=""
+              required
             />
           </div>
           <div class="mb-3">
-            <label for="" class="form-label">Password</label>
+            <label for="" class="form-label fs-4 fw-semibold">Password</label>
             <input
               type="password"
               class="form-control"
               name="password"
               id="password"
               placeholder=""
+              required
             />
           </div>
           <button type="submit" class="btn btn-success">Submit</button>
