--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
 
       .form {
-        background-color: darkgrey;
+        background-color: rgb(141, 121, 121);
       }
     </style>
   </head>
