changed to Username2

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          <form action="patient.html" method="get" class="form p-5 form-border">
           <div class="mb-3">
             <label for="username" class="form-label fs-4 fw-semibold"
-              >Username</label
+              >Username2</label
             
             <input
               type="text"
